// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFlexItem grow 1 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow1"
/>
`;

exports[`OuiFlexItem grow 2 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow2"
/>
`;

exports[`OuiFlexItem grow 3 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow3"
/>
`;

exports[`OuiFlexItem grow 4 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow4"
/>
`;

exports[`OuiFlexItem grow 5 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow5"
/>
`;

exports[`OuiFlexItem grow 6 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow6"
/>
`;

exports[`OuiFlexItem grow 7 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow7"
/>
`;

exports[`OuiFlexItem grow 8 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow8"
/>
`;

exports[`OuiFlexItem grow 9 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow9"
/>
`;

exports[`OuiFlexItem grow 10 is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrow10"
/>
`;

exports[`OuiFlexItem grow false is rendered 1`] = `
<div
  class="ouiFlexItem ouiFlexItem--flexGrowZero"
/>
`;

exports[`OuiFlexItem grow true is rendered 1`] = `
<div
  class="ouiFlexItem"
/>
`;

exports[`OuiFlexItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiFlexItem testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
